# precommit

./: .dockerignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
precommit/: hook.py
requirements/: requirements.txt  requirements_dev.txt
scripts/: transcrypt.sh
