[metadata]
author = j5pu
author_email = 26859654+j5pu@users.noreply.github.com
description = Pre-commit patch and hooks.
license = MIT
long_description = file: README.md LICENSE
name = precommit
url = https://github.com/j5pu/sinst

[options]
install_requires =
	pip-tools>=6.2
	pre-commit>=2.14

python_requires = >= 3.9
packages = find:

[options.packages.find]
exclude =
	test

[options.extras_require]
dev =
	bump2version>=1.0
	build>=0.6
	jupyter>=1.0
	pytest>=6.2
	rich>=10.7
	setuptools_scm>=6.0

[global]
verbose = 0
